--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,9 @@
         <nav id="navbar" class="navbar">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">Współpraca</a></li>
+            <li><a href="about.html">Wynajem krótkoterminowy</a></li>
+            <li><a href="pricing.html">Wynajem dla Firm</a></li>
             <li><a href="services.html">Nasze pojazdy</a></li>
-            <!-- <li><a href="pricing.html">Pricing</a></li> -->
             <li><a href="contact.html" class="active">Kontakt</a></li>
             <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
           </ul>
@@ -79,7 +79,7 @@
       <div class="breadcrumbs">
         <div
           class="page-header d-flex align-items-center"
-          style="background-image: url('assets/img/page-header.jpg')"
+          style="background-image: url('assets/img/bus-background.jpg')"
         >
           <div class="container position-relative">
             <div class="row d-flex justify-content-center">
