--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <nav id="navbar" class="navbar">
           <ul>
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="about.html">Współpraca</a></li>
+            <li><a href="about.html">Wynajem krótkoterminowy</a></li>
+            <li><a href="pricing.html">Wynajem dla Firm</a></li>
             <li><a href="services.html">Nasze pojazdy</a></li>
-            <!-- <li><a href="pricing.html">Pricing</a></li> -->
             <li><a href="contact.html">Kontakt</a></li>
             <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
           </ul>
